--- a/configs/vit_mltu_default.yaml
+++ b/configs/vit_mltu_default.yaml
@@ -2,6 +2,6 @@ model_path : "results/vit_default"
 height : 32 
 width : 128 
 batch_size : 64 
-learning_rate : 0.002
+learning_rate : 0.001
 train_epochs : 1000 
-device : "cpu" 
+device : "mps" 
