--- a/configs/for_visu.yaml
+++ b/configs/for_visu.yaml
@@ -6,4 +6,4 @@ learning_rate : 0.001
 train_epochs : 1000 
 device : "mps" 
 
-# to visualize the images during trainign. 
+# to visualize the images during training. 
