--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ opencv-python~=4.11.0.86
 torchvision~=0.17.0
 pillow~=11.1.0
 defusedxml~=0.7.1
-ipython~=9.0.2
+ipython
 beautifulsoup4~=4.13.3
 soupsieve~=2.6
 packaging~=24.2
@@ -54,7 +54,7 @@ safetensors~=0.5.3
 requests~=2.32.3
 notebook~=7.3.3
 idna~=3.10
-multidict~=6.3.2
+multidict
 propcache~=0.3.1
 sniffio~=1.3.1
 arrow~=1.3.0
@@ -130,5 +130,5 @@ tokenizers~=0.21.1
 humanfriendly~=10.0
 coloredlogs~=15.0.1
 flatbuffers~=25.2.10
-werkzeug~=3.1.
+werkzeug
 wandb
